CSS - fixed z-index max values

--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -6,7 +6,7 @@
     top: 0;
     padding: 1rem;
     background-color: #000000bb;
-    z-index: 9999999999;
+    z-index: 214748364; /* Max value is 2147483647 */
     overflow-y: auto;
 
     display: none;
@@ -129,7 +129,7 @@
 }
 
 .koti-cloud-sdk-ui--panel {
-    z-index: 9999999999999999999999;
+    z-index: 2147483647; /* Max value is 2147483647 */
     position: fixed;
     width: 100%;
     height: 100%;
